tests/ui/closures/closure-expected-type/expect-region-supply-region.stderr
error[E0521]: borrowed data escapes outside of closure
  --> $DIR/expect-region-supply-region.rs:20:9
   |
LL |     let mut f: Option<&u32> = None;
   |         ----- `f` declared here, outside of the closure body
LL |     closure_expecting_bound(|x| {
   |                              - `x` is a reference that is only valid in the closure body
LL |         f = Some(x);
   |         ^^^^^^^^^^^ `x` escapes the closure body here

error[E0521]: borrowed data escapes outside of closure
  --> $DIR/expect-region-supply-region.rs:30:9
   |
LL |     let mut f: Option<&u32> = None;
   |         ----- `f` declared here, outside of the closure body
LL |     closure_expecting_bound(|x: &u32| {
   |                              - `x` is a reference that is only valid in the closure body
LL |         f = Some(x);
   |         ^^^^^^^^^^^ `x` escapes the closure body here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0521`.
